# EDFlib.cmake

./: CMakeLists.txt  LICENSE  README.md  apple.patch  exports.def  main.c
.github/workflows/: build.yml
toolchains/: aarch64-linux-musl-cross.cmake  loongarch64-linux-cross.cmake  x86_64-linux-musl-cross.cmake
